--- a/source/_posts/architecture/2021-03-20-微软的软件架构设计原则.md
+++ b/source/_posts/architecture/2021-03-20-微软的软件架构设计原则.md
@@ -25,10 +25,10 @@ date: 2021-03-20
 - 高层次的模块不要依赖于低层次的模块，都应该依赖于抽象(接口)。
 - 抽象(接口)不应该依赖于具体，而具体要依赖于抽象。<br>
 普通类依赖关系是直接依赖, 如下图:
-<img src="./images/screenshots/screen_shot_2021_03_19.png"/>
+![](/images/screenshots/screen_shot_2021_03_19.png)
 <br>
 但是为了系统松耦合, 可测试, 模块化和可维护, 使用依赖反转原则将类的依赖反转, 使原本依赖类B的类A依赖自己控制的接口A, 而类B也依赖接口A. 这样就实现了依赖反转. 下图比微软官网更加清晰:
-<img src="./images/screenshots/screen_shot_2021-03-19.png"/>
+![](/images/screenshots/screen_shot_2021-03-19.png)
 这样的实现, 虽然在代码实现时需要多余的实现, 但是在运行时它的依赖关系并没有改变. 依赖反转原则也为依赖注入提供了可能.
 
 ### Explicit dependencies 显式依赖
