--- a/source/_posts/database/SQL Server/2021-02-05-SQL SERVER 2019.md
+++ b/source/_posts/database/SQL Server/2021-02-05-SQL SERVER 2019.md
@@ -13,7 +13,7 @@ date: 2021-02-05
 ## 简介
 
 SQL Server2019 主要的新特性可以用官方的一张图说明：
-<img src="./images/2021-02/2019_solve_data_challenges.png"/>
+![](/images/2021-02/2019_solve_data_challenges.png)
 
 ### SQL Server Intelligent Performance
 
@@ -30,10 +30,10 @@ SQL Server2019 主要的新特性可以用官方的一张图说明：
 ### Intelligent Query Processing
 
 使用智能查询处理，用户可以不改动应用层代码，只需将 T-SQL 跑在兼容等级 150 的 MSSQL 数据库上(这意味着想要充分使用这个特性，只能使用 2019 版本和云上 Azure, 2017 有部分功能)。MSSQL 的兼容等级见下表:
-<img src="./images/2021-02/mssql_compatibility_level.png"/>
+![](/images/2021-02/mssql_compatibility_level.png)
 
 `Intelligent Query Processing`主要包含如下特性：
-<img src="./images/2021-02/IQP_features.png"/>
+![](/images/2021-02/IQP_features.png)
 几个优化技术简介：
 
 - `Adaptive QP` 自适应查询处理， 150 会使用这个技术自适应地选择 join,交错执行`Interleaved execution`,内存授予反馈`Memory Grant Feedback`.
@@ -48,7 +48,7 @@ SQL Server2019 主要的新特性可以用官方的一张图说明：
 
 首先开启查询存储`SET QUERY_STORE = ON (OPERATION_MODE = READ_WRITE)`, 使用 SSMS 从左边栏目可以看到资源消耗最大的几个查询：
 
-<img src="./images/2021-02/query_store_index.jpg" />
+![](/images/2021-02/query_store_index.jpg)
 
 运行如下 SQL, 从右边的查询存储分析一下不同兼容等级的查询性能和执行计划。
 
@@ -127,8 +127,8 @@ GO
 ```
 
 <div>
-<img src="./images/2021-02/query_store_130.png" />
-<img src="./images/2021-02/store_query_150.png" />
+![](/images/2021-02/query_store_130.png)
+![](/images/2021-02/store_query_150.png)
 </div>
 
 我们可以看到上面第一张图是 130 兼容性使用`nested loop join`, 虽然只用了一行 join, 但是性能不如 150 兼容性的`Adaptive join`自适应选择 join 方式（此例用了 hash join+clustered index scan); 同时用了`Table Variable Deferred Compilation`和`Batch mode for rowstore`技术。
