--- a/source/_posts/Devices/2022-08-05-OCT-basic.md
+++ b/source/_posts/Devices/2022-08-05-OCT-basic.md
@@ -16,16 +16,16 @@ OCT(光学相干断层扫描)的基本原理是把光束(近红外光800-1500nm)
 
 ### 时域OCT
 第一台被发明的OCT就是时域OCT，通过调节移动参考镜，使参考光分别与从眼内不同结构反射回来的信号光产生干涉，通过分别记录相应的参考镜空间位置，便可测量出眼球内不同组织结构的距离
-<img src="./images/2022-08/time-domain-oct.png" />
+![](/images/2022-08/time-domain-oct.png)
 
 ### 频域OCT
 频域OCT则保持参考镜不动，所有从不同层面反射回来的光通过分光仪和光电探测器，使用傅里叶变换将频谱干涉图变成时域含有深度信息的图。
-<img src="./images/2022-08/spectual-domain-oct.png" />
+![](/images/2022-08/spectual-domain-oct.png)
 
 相比时域OCT需要移动参考镜且一次只能获取一个信号，频域OCT成像的速度更快（40-100倍），分辨率更高，信噪比更高。下图是具体比较。
-<img src="./images/2022-08/oct-compare.png" />
+![](/images/2022-08/oct-compare.png)
 
 ### Ascan, Bscan和Cube
 Ascan是Z轴或深度的光反射扫描，成像是一个时间与强度坐标的点。Bscan是沿着X轴或者Y轴进行Ascan，成像是一幅2D的平面横截图. Cscan或者叫Cube是将Bscan沿着另一个轴进行扫描，形成3D立体的Cube.
-<img src="./images/2022-08/bscan.png" />
-<img src="./images/2022-08/cube.png" />
+![](/images/2022-08/bscan.png)
+![](/images/2022-08/cube.png)
