add more finance

--- a/source/_posts/2023-12-13-非财务经理的财务课.md
+++ b/source/_posts/2023-12-13-非财务经理的财务课.md
@@ -10,7 +10,7 @@ tags:
 
 ### 基础财务术语
 - B/S = Balance Sheet 资产负债表
-- P&L = Profit and loss Statement 损益表
+- P&L = Profit and Loss Statement 损益表
 - Cash flow (operating cash flow, free cash flow = FCF) 现金流
 - Sales revenue (Net sales) 销售收入 （净销售）
 - CoS/CoGS = Cost of Sales/Cost of Goods Sales 销售成本
@@ -30,6 +30,8 @@ tags:
 **含义：**总括地反映会计主体在特定日期（年末、季末、月末）财务状况的报表。
 **基本结构：**资产 = 负债 + 所有者权益。 无论公司处于什么状态这个会计平衡公式永远是恒等的。
 **提供的信息：**资本来源和资本状况，包括公司掌握的经济资源，公司所负担的债务，公司的偿债能力，公司所有者所享有的权益，公司经营模式特点。
+![](../images/screenshots/asset-eq.png)
+
 **资产的组成包括：**
 - 非流动资产
     - 无形资产
@@ -37,7 +39,7 @@ tags:
     - 资产投资
     - 权益法下投资的关系公司股权
     - 其它金融资产
-- 流程资产
+- 流动资产
     - 库存
     - 应收账款
     - 其它流动资产
@@ -73,17 +75,67 @@ tags:
 **含义：**反映公司在过去一段时间销售收入、成本和盈利关系的报表。P&L体现在`权责发生制度`下，收入和支出被记录在它们发生的时候，而不是在现金实际收到或支付的时候。这意味着，即使现金尚未交换，但在业务活动发生的时候，相应的收入或支出就会被记录。
 **基本结构：**利润 = 收入 - 支出
 **提供的信息：**反映公司获利情况，反映公司利润的构成，反映税金缴纳情况，预测公司未来发展的情况。
-`企业的净利润来自三方面：1. 营业利润 2. 投资收益 3. 营业外收支净额`
+**企业的净利润来自三方面：**1. 营业利润 2. 投资收益 3. 营业外收支净额
+**销售收入的确认时间：**
+- 销售商品采用托收承付方式，在办妥托收手续时确认收入。
+- 销售商品采用预收款方式的，在发出商品时确认收入，预收款应确认为负债。
+- 销售商品需要安装和检验的，在购买方接受商品以及安装和检验完毕前，不确认收入，待安装和检验完毕后确认收入。如果安装比较简单，可以在发出商品时确认收入。
+- 销售商品采用以旧换新的，销售的商品应当按照销售商品收入确认条件确认收入。回收的商品作为购进商品处理。
+**净利润公式展开**
+```
+Sales revenues 销售收入
+- Cost of goods sold(COGS) 销售成本
+= Gross profit  毛利
++ Other operating income  其他运营收入
+- Sales and marketing (S&M) expense  销售和市场费用
+- General administration (G&A) expense 管理费用
+- Research and Development (R&D) expense  研发费用
+- Other operating expense   其他运营费用
+= Earning Before Interest and Taxes(Ebit) 息税前利润
++/- Financial result  财务费用
+= Earning Before Taxes (Ebt) 税前利润
+- income taxes  所得税
+= Net Income  净利润
+```
 
 #### 现金流量表 Cash Flow Statement
 **含义：**提供企业在某一特定期间内有关现金及现金等价物的流入和流出信息。FCF体现在`现金发生制`下，现金发生制度只在现金实际发生交易时记录收入和支出，而不考虑交易发生的时间。
+**基本结构：**现金流量 = 现金流入 - 现金流出
 **提供的信息：**反映净收益与现金余额的关系，预测未来现金流量，评价企业取得和运用现金的能力，确定企业支付利息、股利和到期债务的能力。
+**影响因素：**
+- 应收账款 --
+- 存货 --
+- 固定资产投资 --
+- 应付账款 ++
+- 预收账款 ++
+**现金流中的流出和流出与损益表的收入和支出不完全一致，某些项不会对现金流产生影响：**
+- 赊销产生的收入
+- 固定资产折旧
+- 存货或应收账款冲销
+- 费用的预提
+
+##### 自由现金流 Free Cash Flow
+定义：自由现金流指扣除除新增资本投资后公司核心经营活动产生的现金流，是一项理论上更准确的业绩和公司财务状况衡量指标，反映公司在会计年度或季度内支付所有现金成本和费用后剩余的现金。计算自由现金流时会将运营资本的变化考虑进去。因此，自由现金流能够体现企业产生或消耗现金的能力程度。
+```
+EbiT
++/- change in trade receivables
++/- change in inventories
++/- change in prepayments received
++/- change in payments in advance
++/- change in other provisions
+- investments
++ Deprecation
+= Free Cash Flow
+```
 
 ### 上市公司报表例子
-资产表：
+#### 资产=负债+权益：
 ![](../images/screenshots/BS-fix.png)
 ![](../images/screenshots/BS-assets.png)
 
 负债及所有者权益表：
 ![](../images/screenshots/BS-eq-lia.png)
 
+
+#### 损益表
+![](../images/screenshots/income-statement.png)
