--- a/source/_posts/2023-12-13-非财务经理的财务课.md
+++ b/source/_posts/2023-12-13-非财务经理的财务课.md
@@ -6,13 +6,13 @@ tags:
 ---
 
 ## 回顾
-财务知识对于很多非财务背景的同学看似很陌生，其实必要的财务知识对于我们日常的生活和工作都有着息息相关的帮助。本人曾参加多次参加线上和线下财务和金融知识方面的培训，可惜疏于总结和应用，直到最近开始规划产品的商业化落地损益表计算才又捡起来。本文将总结自己曾经学习到的知识做个总结，适用于非财务背景的同学食用。
+财务知识对于很多非财务背景的同学看似很陌生，其实必要的财务知识对于我们日常的生活和工作都有着息息相关的帮助。本人曾参加多次参加线上和线下财务和金融知识方面的培训，可惜疏于总结和应用，直到最近开始规划产品的商业化落地才又捡起来。本文将总结自己曾经学习到的知识做个总结，适用于非财务背景的同学食用。
 
 ### 基础财务术语
 - B/S = Balance Sheet 资产负债表
 - P&L = Profit and Loss Statement 损益表
-- Cash flow (operating cash flow, free cash flow = FCF) 现金流
-- Sales revenue (Net sales) 销售收入 （净销售）
+- Cash Flow (operating cash flow, free cash flow = FCF) 现金流
+- Sales Revenue (Net sales) 销售收入 （净销售）
 - CoS/CoGS = Cost of Sales/Cost of Goods Sales 销售成本
 - GP/GM = Gross Profit/Gross Margin 毛利
 - GP% = Gross Profit / Sales Revenue 毛利率
@@ -25,8 +25,8 @@ tags:
 - AR = Accounts Receivables 应收账款
 - Inv = Inventory 存货
 
-### 掌握三大表，韭菜少不了
-#### 资产负债表 B/S
+### 掌握三大表，韭菜当地好
+#### 资产负债表 Balance Sheet
 **含义：**总括地反映会计主体在特定日期（年末、季末、月末）财务状况的报表。
 **基本结构：**资产 = 负债 + 所有者权益。 无论公司处于什么状态这个会计平衡公式永远是恒等的。
 **提供的信息：**资本来源和资本状况，包括公司掌握的经济资源，公司所负担的债务，公司的偿债能力，公司所有者所享有的权益，公司经营模式特点。
@@ -47,6 +47,7 @@ tags:
     - 现金或现金等价物
 - 待摊费用
 - 待售非流动资产
+
 **负债及所有者权益包括：**
 - 所有者权益
     - 股本
