--- a/source/_posts/2023-12-13-非财务经理的财务课.md
+++ b/source/_posts/2023-12-13-非财务经理的财务课.md
@@ -30,7 +30,7 @@ tags:
 **含义：**总括地反映会计主体在特定日期（年末、季末、月末）财务状况的报表。
 **基本结构：**资产 = 负债 + 所有者权益。 无论公司处于什么状态这个会计平衡公式永远是恒等的。
 **提供的信息：**资本来源和资本状况，包括公司掌握的经济资源，公司所负担的债务，公司的偿债能力，公司所有者所享有的权益，公司经营模式特点。
-![](../images/screenshots/asset-eq.png)
+![asset-eq](/images/screenshots/asset-eq.png)
 
 **资产的组成包括：**
 - 非流动资产
@@ -84,7 +84,7 @@ tags:
 - 销售商品采用以旧换新的，销售的商品应当按照销售商品收入确认条件确认收入。回收的商品作为购进商品处理。
 
 **净利润公式展开**
-```
+``` 净利润公式
 Sales revenues 销售收入
 - Cost of goods sold(COGS) 销售成本
 = Gross profit  毛利
@@ -111,7 +111,7 @@ Sales revenues 销售收入
 - 应付账款 ++
 - 预收账款 ++
 
-**现金流中的流出和流出与损益表的收入和支出不完全一致，某些项不会对现金流产生影响：**
+**现金流中的流入和流出与损益表的收入和支出不完全一致，某些项并不会对现金流产生影响：**
 - 赊销产生的收入
 - 固定资产折旧
 - 存货或应收账款冲销
@@ -119,7 +119,7 @@ Sales revenues 销售收入
 
 ##### 自由现金流 Free Cash Flow
 定义：自由现金流指扣除除新增资本投资后公司核心经营活动产生的现金流，是一项理论上更准确的业绩和公司财务状况衡量指标，反映公司在会计年度或季度内支付所有现金成本和费用后剩余的现金。计算自由现金流时会将运营资本的变化考虑进去。因此，自由现金流能够体现企业产生或消耗现金的能力程度。
-```
+``` 自由现金流
 EbiT
 +/- change in trade receivables
 +/- change in inventories
@@ -131,14 +131,40 @@ EbiT
 = Free Cash Flow
 ```
 
+### 利润中心和成本中心
+#### 利润中心 Profit Center
+指一个责任中心，如果能同时控制生产和销售，既要对成本负责又要对收入负责，但没有责任或权力决定该中心资产投资的水平，因而可以根据其利润的多少来评价该中心的业绩， 因此称为利润中心。
+- 处于内控目的而设定的反应管理架构的会计组织单位，是用于计算利润的一个组织单元
+- 可判断公司内各职责单元的损益情况
+- 事业部Business Unit内的最小组织单元
+
+利润中心生成报告的目的是：
+- 衡量组织内各单元的业务发展情况指标。
+- 报告采用全球统一的标准，保证全球各事业部的业务结果可统一衡量和合并。
+- 可比较衡量集团内或各事业部内各组织单元的利润情况
+
+#### 成本中心 Cost Center
+成本中心对费用进行独立预算，纪律和归集组织单位。成本中心一般包括生产，行政，管理层，财务，服务，销售，IT和HR等。也可以按区域划分，比如销售区域。
+成本中心报告的目的：
+- 增加公司成本结构的透明度，以此明确各自的责任
+- 增强对于成本费用的管理，提供利润
+- 为组织内的各部分细分团队提供成本信息
+- 反映公司区域组织架构
+- 确保将成本正确地分担至各个利润中心
+
+
 ### 上市公司报表例子
 #### 资产=负债+权益：
-![](../images/screenshots/BS-fix.png)
-![](../images/screenshots/BS-assets.png)
+![bs-fix](/images/screenshots/BS-fix.png)
+![bs-assets](/images/screenshots/BS-assets.png)
 
 负债及所有者权益表：
-![](../images/screenshots/BS-eq-lia.png)
-
+![bs-eq-lia](/images/screenshots/BS-eq-lia.png)
 
 #### 损益表
-![](../images/screenshots/income-statement.png)
+![income](/images/screenshots/income-statement.png)
+
+### 业财融合，发现问题和机会
+财务数据可以帮助高管做决策，而在决策的过程中，我们不能以看财报的眼光看待财务数据，而要从内部决策的角度看待数据，财务数据是可以支持内部决策的。
+财务并不是在经营结束后进行总结的滞后性数据，财务往往可以提前涉及，是基于未来的。例如，在编制预算中，我们就可以有针对性的对报表架构进行设计，如用多少倍的杠杆，是否轻资产架构等等。
+在做决策的过程中，我们往往不用账本上的数据做决策，因为记在账簿的数据是已经发生的沉没成本，沉没成本不能用于做决策，但可以参考这些数据，机会成本，机会业绩，这些可能在未来发生的数据才是用来支持决策。
