--- a/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
+++ b/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
@@ -885,11 +885,28 @@ Solidity 编译器安全漏洞[SOL-2023-2](https://entethalliance.org/specs/etht
 若智能合约在执行过程中检查账户余额是否等于​​特定精确值​​，则存在潜在风险：攻击者可通过向该账户转账来改变其余额，导致交易意外回滚等非预期结果。若必须使用此类检查，​​必须​​实施防护措施以抵御此类攻击可能性。
 
 
-#### 5.2.1 [M] 必须通过等级 [S]
-[M] Pass Security Level [S]
-若要获得等级 [M] 认证，测试代码（Tested Code）必须满足 § 5.1 安全等级 [S] 的所有要求，除非与每项对应的 “Overriding Requirement” 完全替代该要求
-Enterprise Ethereum Alliance
-。
+#### 5.2.1 文本与同形字攻击
+本节要求与安全公告[CVE-2021-42574](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-cve-2021-42574)及[CWE-94](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-cwe-94)"代码生成控制不当"（亦称"代码注入"）相关。
+```
+[M]禁用非必要Unicode控制符
+被测代码​​不得​​使用Unicode方向控制字符，除非对文本正确渲染确有必要, 并且渲染结果不会误导读者
+（此为 [S]级要求 禁用 Unicode 方向控制字符 的覆盖要求）
+```
+​​安全等级[M]允许​​在文本字符串中使用Unicode方向控制字符，但需经必要性分析。
+```
+[M] 禁止同形字式攻击
+被测代码​​不得​​使用同形字、Unicode 控制符、组合字符或多 Unicode 区块字符，若其效果具有误导性。
+```
+通过替换不同字母表中视觉相似的字符（如拉丁字母 "a" 与西里尔字母 "а"）、使用方向控制符或组合字符，可构造恶意代码欺骗审计人员。例如：
+使用 "í" 冒充 "i" 或 "ì"
+阿拉伯语 "ت" 冒充 "ث"
+数字 "1" 冒充字母 "l"
+数学符号 "𝚒" 冒充拉丁字母 "i"
+此类攻击称为​​同形字攻击​​，具体手法详见 [Ivanov](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-ivanov)。
+若变量名/标签中​​确需混用多Unicode区块字符​​（如双语混合命名），只要不产生误导或混淆，仍可通过EEA EthTrust认证。
+审计人员判定存在​​非必要误导或混淆​​时，视为不符合要求。
+​​关联要求​​：[S][禁用Unicode方向控制字符](https://entethalliance.org/specs/ethtrust-sl/v3/#req-1-unicode-bdo)
+
 
 5.2.2 [M] 显式消除变量评估顺序不确定性
 [M] Explicitly Disambiguate Evaluation Order
