--- a/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
+++ b/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
@@ -4,11 +4,7 @@ comment: true
 date: 2025-08-03 13:01:59
 tags: Block, ETH, Security
 ---
-
-# EEA EthTrust 安全等级规范 第3版
-2025年3月
-
-### ​​当前版本​​:
+### ​​当前版本(2025/3)​​:
 https://entethalliance.org/specs/ethtrust-sl/v3/
 
 ### ​​本版本检查清单​​:
