--- a/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
+++ b/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
@@ -1197,45 +1197,291 @@ function xChangeFrom(uint256 numberOfOtherToken) public returns (uint256) {
 
 [可延展签名](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-malleable-signatures)允许攻击者为同一邮件创建新签名。如果使用可延展的签名，检查签名哈希值以确保消息仅被处理过一次的智能合约可能容易受到重放攻击。
 
-#### 5.2.5 Solidity 编译器已知漏洞与覆盖要求
-若项目使用的 Solidity 编译器版本存在以下已知的安全 bug，必须满足以下条件：
+#### 5.2.5 安全级别 [M] 编译器错误和覆盖要求
+§5.1.3编译器错误中描述的一些`solidity`编译器错误在安全级别[M]上具有覆盖要求，并且有些具有在软件中不易检测到的触发条件。
 
-避免使用受影响的编译器版本；
+<div style="background-color: #d4edda; border: 1px solid #c3e6cb; border-left: 4px solid #28a745; border-radius: 4px; padding: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+<strong style="color:#28a745;">注意</strong></br>
+实施推荐的良好实践 [GP] 使用最新编译器意味着测试代码通过了本小节中的所有要求。
+</div>
+```
+[M] Solidity 编译器错误 2023-1
+包含使用 .selector 的具有副作用的复合表达式的测试代码必须将 viaIR 选项与 0.6.2 到 0.8.20 之间的 Solidity 编译器版本一起使用。
+```
+Solidity 编译器版本 0.6.2 中引入并在 Solidity 编译器版本 0.8.21 中修复的一个bug, 这个bug是当复合表达式访问`.selector`成员时，除非使用 viaIR 管道，否则不会计算表达式。因此，不会发生由该表达引起的任何副作用。
 
-或者满足相应的 Overriding Requirement 由审计者确认安全；
+另请参阅 2023 年 7 月 19 日的[安全警报](https://blog.soliditylang.org/2023/07/19/missing-side-effects-on-selector-access-bug/)。
+```
+[M] 编译器错误 SOL-2022-7
+​​经测试的代码中，若存在存储写入操作后跟随条件性提前终止（该终止由包含return()或stop()指令的内联汇编函数触发），则绝对禁止使用 Solidity 编译器版本 0.8.13 至 0.8.16（含）进行编译。​
+这是 [S] No assembly {} 的覆盖要求集的一部分。
+```
+Solidity 编译器版本 0.8.17 中修复的一个错误意味着在优化期间，存储写入后从内联汇编函数有条件提前终止有时会被错误地丢弃。
 
-推荐总是使用推荐的 viaIR 选项；
+另请参阅 2022 年 9 月 5 日的[安全警报](https://blog.soliditylang.org/2022/09/08/storage-write-removal-before-conditional-termination/)。
 
-避免使用 inline assembly 并保持其调用范围可控；
-
-以下是该级别的主要需求：
-
-[M] Solidity Compiler Bug 2023‑1
-若存在 .selector 的有副作用的复合表达式，使用 Solidity 0.6.2 到 0.8.20 版本时必须启用 viaIR 编译器选项
-Enterprise Ethereum Alliance
-。
-
-[M] Compiler Bug SOL‑2022‑7
-使用 inline assembly 并在其中包含存储写操作后条件终止（如 return() 或 stop()），Solidity 0.8.13 到 0.8.16 版本不能使用
-Enterprise Ethereum Alliance
-。
-
+```
 [M] Compiler Bug SOL‑2022‑5 in assembly {}
-当从 calldata 或 memory 中拷贝字节数据长度不是 32 字节倍数，并用 assembly {} 读取时，Solidity 0.8.14 及以下（不含 0.8.15）版本存在超界可见漏洞，必须避开
-Enterprise Ethereum Alliance
-。
+当从 calldata 或 memory 中拷贝字节数据长度不是 32 字节倍数，并用 assembly {} 读取时，Solidity 0.8.14 及以下（不含 0.8.15）版本存在超界可见漏洞，必须禁止使用老的版本。
+```
+在 Solidity 编译器版本 0.8.15 之前，复制长度不是 32 字节倍数的内存或调用数据可能会暴露超出复制数据的数据，这可以使用`assmebly {}` 观察到。
 
+另请参阅 2022 年 6 月 15 日[安全警报](https://blog.soliditylang.org/2022/06/15/dirty-bytes-array-to-storage-bug/)和[相关要求](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-related-requirements) [S] 编译器错误 SOL-2022-5 与 .push（） 、[M] 避免常见assmebly {} 攻击向量、[M] 文档特殊代码使用、[M] 编译器错误 SOL-2022-4 和 [M] 编译器错误 SOL-2021-3。
+
+```
 [M] Compiler Bug SOL‑2022‑4
-在不同的 assembly {} 片段中写入与读取时使用共享内存，但某个优化路径下丢失该内存，Solidity 0.8.13 或 0.8.14 不可使用带 yulOptimizer
-Enterprise Ethereum Alliance
-。
+在不同的 assembly {} 片段中写入与读取时使用共享内存，但某个优化路径下丢失该内存，Solidity 0.8.13 或 0.8.14 不可使用yulOptimizer
+```
+Solidity 编译器版本 0.8.13 引入了一个`yulOptimizer`错误，该错误在 Solidity 编译器版本 0.8.15 中修复，其中在`assembly {}` 指令中创建但仅在不同的`assembly {}` 指令中读取的内存被丢弃。
 
+另请参阅 2022 年 6 月 17 日[安全警报](https://blog.soliditylang.org/2022/06/15/inline-assembly-memory-side-effects-bug/)和相关要求 [M] 避免常见assmebly {} 攻击向量、[M] 文档特殊代码使用、[M] 编译器 Bug SOL-2022-7、[M] 程序集 {} 中的编译器 Bug SOL-2022-5 和 [M] 编译器 Bug SOL-2021-3。
+```
 [M] Compiler Bug SOL‑2021‑3
-在 assembly {} 中读取 immutable 但短于 256 位的带符号整数时，Solidity 0.6.5 到 0.8.8 存在错误，不可使用
-Enterprise Ethereum Alliance
-。
+在 assembly {} 中读取 immutable 但短于 256 位的带符号整数时，Solidity 0.6.5 到 0.8.8(含) 存在错误，不可使用
+```
 
+Solidity 编译器版本 0.6.8 引入了一个错误，该错误在 Solidity 编译器版本 0.8.9 中修复，这意味着在内联`assembly {}` 指令中可能会错误地读取短于 256 位的不可变有符号整数类型。
+
+另请参阅 2021 年 9 月 29 日[安全警报](https://blog.soliditylang.org/2021/09/29/signed-immutables-bug/)和相关要求 [M] 安全使用程序集 {}、[M] 文档特殊代码使用、[M] 程序集 {} 中的编译器错误 SOL-2022-5 和 [M] 编译器错误 SOL-2022-4。
+```
 [M] Use a Modern Compiler
-Solidity 编译器不应低于 0.8.0 版本，除非满足版本范围内旧 bug 的 Overriding Requirement（例如从 v2 规范遗留要求）；最低不能低于 0.6.0 除非进一步满足前期版本的多个自定义 Overriding Requirement
-Enterprise Ethereum Alliance
-。
+测试的代码不得使用早于 0.8.0 的 Solidity 编译器版本，除非它满足 EEA EthTrust 安全级别规范第 2 版中的 [M] 编译器错误检查构造函数付款的要求，作为优先要求, 并且
+测试代码不得使用早于 0.6.0 的 Solidity 编译器版本，除非它满足 EEA EthTrust 安全级别规范第 1 版中的以下所有要求，作为覆盖要求：
+- [M] 编译器错误 SOL-2020-2，
+- [M] 汇编中的编译器错误 SOL-2019-2 {}，
+- [M] 编译器错误检查标识调用，
+- [M] 验证 ecrecover（） 输入，
+- [M] 编译器错误-无零以太发送，以及
+- [M] 显式声明存储。
+```
+
+### 5.3 [Q]安全等级
+除了可自动的静态测试验证（安全级别 [S]）和手动审核（安全级别 [M]）之外，安全级别 [Q] 的 EEA EthTrust 认证还意味着检查测试代码的预期功能是否得到充分记录，可以验证其功能正确性，代码和文档是否经过人工审核员或审核团队的彻底审查，以确保它们内部连贯且相互一致， 足够仔细地识别复杂的安全漏洞。
+
+这种级别的审查对于使用 ERC20 [ERC20](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-erc20)、ERC721 [ERC721](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-erc721) 等的代币尤其相关;[token-standards](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-token-standards) 标识了可以定义标记的许多其他标准。
+
+在此安全级别，还需要检查以确保代码不包含不直接影响安全性但会影响代码质量的错误。代码经常被复制，因此安全级别 [Q] 要求代码尽可能编写好。要解决的风险是，在复制现有代码作为起点后引入弱点很容易，而且并不少见。
+```
+[Q] 通过安全级别 [M]
+要获得安全级别 [Q] 的 EEA EthTrust 认证，经过测试的代码必须满足 § 5.2 安全级别 [M] 的要求。
+```
+```
+[Q] 将 TimeLock 延迟用于敏感操作
+影响所有或大多数用户的敏感作必须使用 [TimeLock] 延迟。
+```
+敏感操作，例如智能合约升级和 [RBAC](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-rbac) 更改，会影响协议中的所有或大多数用户。[TimeLock](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-timelock) 延迟允许用户在不同意提议的更改时退出系统，并允许开发人员在检测到可疑更改时做出反应。
+```
+[Q] 代码 Linting
+测试的代码
+
+- 不得创建不必要的变量，并且
+- 不得对可能在同一范围内出现的函数、变量或其他标记使用相同的名称，并且
+- 不得包含在正常作中失败的 assert() 语句，并且
+- 不得包含执行中无法访问的代码
+- 明确用于管理意外错误的代码除外，例如 assert() 语句，以及
+- 不得包含与智能合约同名的函数，除非使用 constructor 关键字将其显式声明为构造函数，并且
+- 必须显式声明所有函数和变量的可见性，并且
+- 必须在其编译指示中指定一个或多个 Solidity 编译器版本。
+```
+代码通常从“好示例”复制，作为开发的起点。达到安全级别 [Q] EEA EthTrust 认证的代码意味着高质量，因此确保复制它不会鼓励坏习惯非常重要。查看不包含无意义代码的测试代码也更容易。
+
+函数和变量具有相同名称的代码通常更难阅读。如果这些项目在范围上可以重叠，编译将消除它们的歧义，但它们通常需要审稿人进行大量工作才能在精神上分离。在多个不重叠的循环中使用 i，j 作为计数器是可以的，但是在“外部作用域”中有一个变量，其名称被其他一些变量或函数复制在“内部作用域”中会增加遵循执行模式所需的工作量。
+
+明确允许​​设计用于捕获意外错误的代码, 例如 `assert()`指令，因为若防御性编写的代码成功消除了触发特定错误的可能性，却无法获得 EEA EthTrust 认证，将非常遗憾。`assert()`语句​​仅适用于不变量的检查​​，而非作为通用错误处理机制。若在常规操作中因将`assert()`作为错误捕获机制而导致失败，​​应替换为`require()`语句​​或专为该用例设计的类似机制。若因编码缺陷导致失败，则​​必须修复该缺陷​​。
+
+对 `assert()`语句的要求基于 [CWE-670](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-cwe-670) 始终不正确的控制流实现。
+```
+[Q] 管理Gas使用量增加
+必须有足够的 Gas 来处理测试代码中随时间增长的数据结构，根据 [Q] 文档契约逻辑提供的描述。
+```
+一些结构（例如数组）可以增长，并且变量的值（根据设计）是可变的。迭代一个事先不清楚大小的结构，无论是增长的数组、变化的边界还是由外部值决定的东西，都可能导致 gas 使用量显着增加。需要在预期的业务逻辑的上下文中考虑什么是合理的增长，以及测试代码如何防止 [Gas Griefing](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-gas-griefing) 攻击，在这些攻击中，恶意参与者或错误导致值超出预期的合理范围。
+
+另请参阅 [SWC-126](https://swcregistry.io/docs/SWC-126)、[SWC-128](https://swcregistry.io/docs/SWC-128) [swcregistry] 和第 5.3.1 节文档要求中的相关要求。
+```
+[Q] 保护Gas使用
+测试的代码必须防止恶意行为者窃取或浪费gas。
+```
+允许“无 Gas”交易的智能合约使用户无需提供自己的 Gas 即可提交交易。需要仔细实施它们，以防止 [Gas Griefing](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-gas-griefing) 和 [Gas Siphoning](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-gas-siphoning) 攻击的拒绝服务。
+
+另请参阅 The Gas Siphon Attack： How it Happened and How to Protect Yourself from the DevCon 2019 talk [DevCon-siphoning](https://archive.devcon.org/archive/watch/5/the-gas-siphon-attack-how-it-happened-and-how-to-protect-yourself/)。
+```
+[Q] 防止 Oracle 预言机故障
+经过测试的代码必须保护自己免受其所依赖的 Oracle 中的故障。
+```
+众所周知，一些预言机很容易受到操纵，例如，因为它们提供的信息来自易受只读重入攻击的信息，或者通过使用闪电贷来纵价格以启用 MEV 攻击，以及其他众所周知的攻击。
+此外，作为网络软件，预言机可能会遇到从延迟问题到彻底失败或停产等问题。
+重要的是要检查预言机用于生成其提供的信息的机制，以及依赖该预言机的测试代码是否可能受到其失败的影响，或者恶意行为者纵其输入或代码以启用攻击的影响。
+另请参阅相关要求 [Q] 防范排序攻击和 [Q] 防范 MEV 攻击。
+```
+[Q] 防止排序攻击
+测试的代码必须以防止排序攻击的方式管理信息。
+```
+在排序攻击中，攻击者将其交易置于与受害者交易相比的有利位置。这可以由恶意区块生产者或监控内存池的攻击者完成，并通过广播他们自己的交易并以更高的交易费用抢占易受攻击的交易。取消激励措施是通常缓解措施，通过应用哈希承诺方案 [hash-commit](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-hash-commit) 或批量执行等缓解措施。
+另请参阅相关要求 [Q] 防范 MEV 攻击。
+
+```
+[Q] 防范 MEV 攻击
+易受 MEV 攻击的测试代码必须遵循适当的设计模式来降低这种风险。
+```
+`MEV`是指区块生产者可以恶意重新排序或压制交易，或者区块链中的另一个参与者可以提议交易或采取其他行动来获得他们本不应该获得的利益的可能性。
+这一要求需要审计师仔细判断测试代码如何容易受到`MEV`攻击，以及哪些缓解策略是合适的。一些方法在§ 3.7 MEV（恶意提取值）中进一步讨论。
+需要考虑许多攻击类型，包括排序攻击。
+另请参阅相关要求 [S] 无精确余额检查、[M] 随机性来源、[M] 不滥用区块数据、[Q] 防止 Oracle 故障和 [Q] 防止排序攻击。
+```
+[Q] 防止治理接管
+包含治理系统的测试代码必须防止对治理设计的恶意利用。
+```
+**恶意利用**很难准确定义，因为它取决于系统的既定目标 - 例如 [Q] 文档契约逻辑中描述的目标。从广义上讲，此要求是检查测试代码是否能够抵御恶意实体为获得治理控制权而做出的努力，这些控制权预计将归属于指定的受信任实体，或者分散和广泛分布，以提供治理决策和所采取的行动得到广泛支持的安全感。
+治理攻击特定于被利用的系统。根据治理提案系统的不同，某些漏洞领域可能包括：
+- 发行的治理代币;
+- 治理代币的分配方法;
+- 治理提案的接受和执行的设计。
+例如，如果质押合约用于分配治理代币作为奖励，那么质押合约不易受到闪电贷攻击的攻击非常重要，在闪电贷攻击中，大量代币在非常短期的闪电贷中借入，并以原子方式质押以获得临时大多数治理代币，然后用于做出治理决策， 例如耗尽被攻击者钱包中持有的所有资金。
+
+另请参阅相关要求 [Q] 防止排序攻击。
+```
+[Q] 处理所有输入
+测试的代码必须验证输入，并且无论输入符合设计还是格式错误，都能正常运行。
+```
+未能验证输入的代码可能会被恶意制作的输入，从而触发错误或作者没有预料到的行为。
+另请参见 SWC-123 [swcregistry](https://swcregistry.io/docs/SWC-123)，其中指出重要的是要考虑输入要求是否过于严格，以及是否过于宽松，[CWE-573](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-cwe-573) 调用者不正确遵循规范，并注意 §5.1.3 编译器错误中有一些特定于特定`Solidity` 编译器版本的相关要求。
+```
+[Q] 状态更改触发事件
+测试的代码必须为导致状态更改的所有事务发出合约事件。
+```
+事件是方便的接口，可在 EVM 的日志记录功能之上提供抽象。应用程序可以通过以太坊客户端的 RPC 接口订阅和监听这些事件。更多信息请访问 [solidity-events](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-solidity-events)。
+
+事件通常被期望用于记录所有状态变化，因为它们不仅对链下应用程序有用，而且对安全监控和调试也很有用。记录合约中的所有状态更改可确保与合约交互的任何开发人员都能了解作为`ABI`一部分的每个状态更改，并可以通过事件注释了解预期行为，如 [Q](https://entethalliance.org/specs/ethtrust-sl/v3/#req-3-annotate) 使用NatSpec注释代码。
+```
+[Q] 没有私人数据
+测试代码不得将私有数据存储在区块链上。
+``
+这是安全级别 [Q] 要求，主要是因为什么是私人数据的问题通常需要仔细和深思熟虑的评估以及对上下文的合理理解。一般来说，这可能包括对如何收集数据的评估，以及数据提供者被告知哪些信息的使用情况。
+
+本规范中的私有数据用于指代不打算向公众普遍提供的信息。例如，个人的家庭电话号码通常是私人数据，而企业的客户查询电话号码通常不是私人数据。同样，识别个人帐户的信息通常是私人数据，但在某些情况下它是公共数据。在这种情况下，可以按照此要求将公共数据记录在链上。
+
+<div style="background-color: #f8d7da; border: 1px solid #f5c6cb; border-left: 4px solid #dc3545; border-radius: 4px; padding: 4px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+<strong style="color:#dc3545;">警告</strong>
+请注意：在某些情况下，[GDPR] 等法规对某些私人数据施加了正式的法律要求。但是，针对此要求执行测试会导致专家技术意见，说明审计师认为私有的数据是否被泄露。关于 Tested Code 是否满足此要求的声明不代表任何形式的法律建议或意见、律师代理等。
+</div>
+```
+[Q] 预期重播
+如果测试代码中的签名可以重复使用，则重放实例必须是有意的、记录的并且可以安全地重复使用。
+```
+这是 [M] 不得不当使用重放攻击保护签名的首要要求。
+
+在极少数情况下，测试代码的意图可能是允许重放签名。例如，签名可以用作在给定时间段内参与白名单的权限。在这些特殊情况下，重播必须作为已知限额包含在文档中。此外，必须验证重用不会被恶意利用。
+
+#### 5.3.1 文档要求
+安全级别 [Q] 一致性需要详细描述测试代码的行为方式。除了详细的测试要求以检查它是否在特定已知漏洞方面确实按照描述的行为外，重要的是对其提出的声明是准确的。此要求有助于确保测试代码满足审计特定文档之外的声明。
+
+这些要求的结合有助于确保测试代码中没有隐藏恶意代码，例如恶意“后门”或“定时炸弹”。由于存在充当“定时炸弹”、“电话回家”等行为的代码的合法用例，因此这种组合有助于确保测试专注于实际问题。
+
+本节中的要求扩展了满足安全级别 [M] 要求 [M] 文档特殊代码使用所需的覆盖范围。与该要求一样，此级别有多个要求需要本小节中规定的文件。
+```
+[Q] 合同逻辑文档
+测试代码功能旨在实现的业务逻辑规范必须可供任何可以调用测试代码的人使用。
+```
+以人类可读的格式记录的契约逻辑，并具有足够的细节，审计员可以验证特殊代码使用的功能正确性和安全性假设，帮助他们更高效、更有信心地评估复杂的代码。
+
+重要的是要记录逻辑如何防范潜在的攻击，例如闪电贷攻击（尤其是治理或价格操纵）、MEV 和其他利用生态系统功能或代币经济学的复杂攻击。
+```
+[Q] 系统架构文档
+必须提供测试代码的系统架构文档，以传达总体系统设计、特权角色、安全假设和预期用途。
+```
+系统文档提供审计员信息，以了解安全假设并确保功能正确性。如果系统文档包含在代码存储库的自述文件中或引用，以及有关如何测试、构建和部署源代码的文档，这将很有帮助。
+
+随着时间的推移，变量和更复杂的数据结构的管理是本文档的重要组成部分。这一要求的这一方面可能会通过满足相关要求 [Q] 管理gas使用增加。另请参阅相关要求 [Q] 使用 NatSpec 注释代码。
+```
+[Q] 威胁模型文档
+必须提供测试代码的记录威胁模型，描述每个威胁、安全假设、预期响应和预期结果。
+```
+威胁模型是一种工具，可帮助为可能单独或协同引发的各种攻击做好准备，提供一组假设但可能的场景，以确保测试代码能够充分抵御这些攻击。
+
+一个好的威胁模型将涵盖一系列可能性，包括
+- 出现以前未知的攻击媒介
+- 网络操纵
+- 经济战
+- 治理开发
+- 预言机攻击
+以及其他场景以及此类场景的组合，这些场景可能会压倒测试代码对它们的防御。
+```
+[Q] 使用 NatSpec 注释代码
+测试代码中包含的所有公共接口必须根据 [NatSpec] 格式使用内联注释进行批注，这些注释解释每个函数、参数、事件和返回变量背后的意图，以及安全使用的开发人员说明。
+```
+内联注释对于确保开发人员和审计员了解每个函数和其他代码组件背后的意图非常重要。公共接口是指编译的测试代码的`ABI`中包含的任何内容。还建议对实现敏感和/或复杂逻辑的私有或内部函数使用内联注释。
+
+遵循 [NatSpec] 格式允许 Solidity 编译器理解这些内联注释，以便将它们提取为机器可读格式，其他第三方工具可用于安全评估和自动文档，包括与 `Sourcify` 等源代码验证工具集成的钱包向用户显示的文档。这也可用于生成完全或部分满足 [Q] 合约逻辑文档。
+```
+[Q] 按文档实施
+测试代码的行为必须按照 [Q] 合约逻辑文档和 [Q] 系统架构文档提供的文档中所述进行。
+```
+
+安全级别 [Q] 提供文档的要求很重要。然而，测试代码的实际行为与记录的一样也很重要。如果没有，则可能反映出不够谨慎，并且由于实施中遗漏的错误，代码也容易受到攻击。也有可能，差异是试图在测试代码中隐藏恶意代码。
+
+#### 5.3.2 访问控制
+```
+[Q] 强制执行最低权限
+启用特权访问的经过测试的代码必须根据为 [Q] 合约逻辑文档，实现适当的访问控制机制，为这些交互提供所需的最低权限。
+这是 [M] 保护自毁的覆盖性要求。
+```
+
+有几种常见的方法来实现访问控制，例如基于角色的访问控制 [RBAC](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-rbac) 和 [Ownable](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-ownable)，并且通常针对给定用例实施定制访问控制。使用行业标准方法可以帮助简化审计过程，但不足以确定不存在因实施错误或恶意制作的合同而产生的风险。
+
+在协议运维和部署级别考虑访问控制非常重要。如果一个协议是以确定性的方式部署的，例如允许多链部署在所有链上具有相同的地址，那么显式设置所有者而不是默认为`msg.sender` 很重要，因为这可能会留下一个简单的工厂部署契约作为协议的不足的新管理员。
+
+正如 [SWC-105](https://swcregistry.io/docs/SWC-105) 中所述，适当的访问控制适用于支付尤为重要，但其他作（例如 [SWC-124](https://swcregistry.io/docs/SWC-124) 中描述的数据覆盖或更改特定的访问控制）也需要得到适当的保护 [swcregistry]。此要求与 [CWE-284](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-cwe-284) 不正确的访问控制匹配。
+
+另请参阅 [solidity-patterns](https://fravoll.github.io/solidity-patterns/access_restriction.html) 中的“访问限制”。
+```
+[Q] 使用可撤销和可转让的访问控制权限
+如果测试代码将访问控制用于特权操作，则它必须实现撤销和转移这些权限的机制。
+```
+特权帐户可以对合同集执行管理任务。如果这些帐户被泄露或执行这些任务的责任分配给不同的人，那么拥有撤销和转移这些权限的机制非常重要。
+```
+[Q] 没有特权操作的单个管理员 EOA
+如果测试代码将访问控制用于特权操作，则它必须确保所有关键管理任务都需要执行多个签名，除非存在具有更高权限的管理员（multisg），并且可以在 EOA 受到损害或恶意操作的情况下撤销权限并撤销权限。
+```
+特权帐户可以对合同集执行管理任务。如果单个 EOA 可以执行这些操作，并且该权限无法撤销，那么私钥泄露或丢失对智能合约构成的风险可能是存在的。
+```
+[Q] 验证外部调用
+包含外部调用的测试代码必须
+- 记录对它们的需求，并且
+- 以与合约作者的主张完全兼容的方式保护它们。
+这是 [S] 使用 check-effects-interaction 和 [m] 保护外部调用的一组覆盖性要求的一部分。
+```
+在安全级别 [Q] 审计师可以非常灵活地为外部调用的不同用途提供 EEA EthTrust 认证。
+此要求实际上允许审阅者声明外部调用的目的地不存在安全风险。值得注意的是，任何此类声明都非常密切地反映了审稿人的声誉。
+仅仅因为智能合约被广泛使用就假设它是安全的是不合适的，假设用户提供的智能合约未来会是安全的也是不可接受的——这是一个已知的载体，已被用于许多严重的安全漏洞。
+同样重要的是要考虑审阅者引用和声明安全的任何代码如何容易受到基于其使用外部调用的攻击。
+举一个常见的例子，如果其中一个合约是恶意的，或者只是易受攻击，则允许用户提供任何一对代币合约的交换合约可能会面临风险，而交换合约无法预料和防范。
+另请参阅相关要求 [Q] 文档契约逻辑、[Q] 文档系统架构和 [Q] 文档方式实施。
+```
+[Q] 验证 tx.origin 使用情况
+对于使用 tx.origin 的测试代码，每个实例
+- 必须与测试代码中规定的安全性和功能目标一致，并且
+- 不得允许另一个合约违反针对 [Q] 文档合约逻辑或 [Q] 文档系统架构所做的关于合约功能的断言，即使该合约是由授权直接与测试代码交互的用户调用的。
+这是 [S] No tx.origin 的优先要求。
+```
+`tx.origin`可用于启用网络钓鱼攻击，诱骗用户与合约进行交互，从而访问其账户中的所有资金。对于调用方的授权，`msg.sender` 是更安全的选择。
+
+另请参阅相关要求 [Q] 文档合约逻辑、[Q] 强制执行最低权限、Solidity 安全注意事项 [solidity-security] 中的“tx.origin”部分和 CWE 284：不正确的访问控制 [CWE-284](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-cwe-284)。
+```
+[Q] 指定 Solidity 编译器版本以产生一致的输出
+测试代码必须在其编译指示中指定一系列 Solidity 版本，这些版本在给定相同编译选项的情况下生成相同的字节码。
+```
+不同的编译器版本可能存在不同的安全漏洞并引入意外行为。虽然编译器升级几乎总是会改善安全特性，但无法保证将来所做的任何给定更改都是这种情况。
+
+因此，如果通过遵守测试代码生成的字节码发生变化，则该规范需要进行新的评估，以获得安全级别 [Q] 的 EEA EthTrust 认证。
+
+显式指定确切的 Solidity 版本可以防止与其他版本进行编译，从而确保开发、审计和部署之间的一致性。指定一系列 Solidity 编译器版本，以便使用相同的设置使用该范围内的任何 Soldity 编译器版本编译测试代码会产生相同的字节码，这意味着只要已知编译器没有更改需要进行新的分析，EEA Ethtrust 测试代码认证就有效。
+<div style="background-color: #d4edda; border: 1px solid #c3e6cb; border-left: 4px solid #28a745; border-radius: 4px; padding: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+<strong style="color:#28a745;">注意</strong></br>
+此要求的措辞允许在编译指示中指定开放式范围，例如
+```
+pragma solidity >=0.8.14;
+```
+但是，EEA EthTrust 认证需要指定其有效的特定范围的 Solidity 编译器版本，以防 Solidity 编译器的未来版本编译测试代码以生成不同的字节码。
+这是为了确保在编译器的升级不会导致生成的字节码发生任何变化的情况下，为较新的 Solidity 编译器版本重新认证测试代码几乎不需要工作。
+</div>
+请注意，即使使用特定的编译指示，声称是相同版本、优化设置和其他构建配置参数的不同编译器实现也会影响生成的字节码。
