--- a/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
+++ b/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
@@ -1255,7 +1255,7 @@ Solidity 编译器版本 0.6.8 引入了一个错误，该错误在 Solidity 编
 - [M] 显式声明存储。
 ```
 
-### 5.3 [Q]安全等级
+### 5.3 安全等级[Q]
 除了可自动的静态测试验证（安全级别 [S]）和手动审核（安全级别 [M]）之外，安全级别 [Q] 的 EEA EthTrust 认证还意味着检查测试代码的预期功能是否得到充分记录，可以验证其功能正确性，代码和文档是否经过人工审核员或审核团队的彻底审查，以确保它们内部连贯且相互一致， 足够仔细地识别复杂的安全漏洞。
 
 这种级别的审查对于使用 ERC20 [ERC20](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-erc20)、ERC721 [ERC721](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-erc721) 等的代币尤其相关;[token-standards](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-token-standards) 标识了可以定义标记的许多其他标准。
