forget last reference

--- a/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
+++ b/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
@@ -2276,3 +2276,27 @@ Why is Oracle Manipulation after the Merge so cheap? Multi-Block MEV. ChainSecur
 Reporting a Vulnerability, in Security Policy. Ethereum Foundation. URL: https://github.com/ethereum/solidity/security/policy#reporting-a-vulnerability
 [WSE]
 Symbolic Execution. WikiPedia. URL: https://en.wikipedia.org/wiki/Symbolic_execution
+
+### B.2 Informative references
+[ASVS]
+OWASP Application Security Verification Standard. The OWASP Foundation. URL: https://github.com/OWASP/ASVS
+[certik-rari]
+Fei Protocol Incident Analysis. CertiK. URL: https://certik.medium.com/fei-protocol-incident-analysis-8527440696cc
+[chase]
+Malleable Signatures: New Definitions and Delegatable Anonymous Credentials. Melissa Chase; Markulf Kohlweiss; Anna Lysyanskaya; Sarah Meiklejohn. URL: https://smeiklej.com/files/csf14.pdf
+[EEA-L2]
+Introduction to Ethereum Layer 2. Enterprise Ethereum Alliance, Inc. URL: https://entethalliance.org/eea-primers/entry/5696/
+[EF-MEV]
+Maximal Extractable Value (MEV). Ethereum Foundation. URL: https://ethereum.org/en/developers/docs/mev/
+[EIP-3529]
+Reduction in Refunds. Ethereum Foundation. URL: https://eips.ethereum.org/EIPS/eip-3529
+[futureblock]
+Future-block MEV in Proof of Stake. Ethereum Foundation. URL: https://archive.devcon.org/archive/watch/6/future-block-mev-in-proof-of-stake/?tab=YouTube
+[License]
+Apache license version 2.0. The Apache Software Foundation. URL: http://www.apache.org/licenses/LICENSE-2.0
+[postmerge-mev]
+Why is Oracle Manipulation after the Merge so cheap? Multi-Block MEV. ChainSecurity. URL: https://chainsecurity.com/oracle-manipulation-after-merge/
+[solidity-reports]
+Reporting a Vulnerability, in Security Policy. Ethereum Foundation. URL: https://github.com/ethereum/solidity/security/policy#reporting-a-vulnerability
+[WSE]
+Symbolic Execution. WikiPedia. URL: https://en.wikipedia.org/wiki/Symbolic_execution
