--- a/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
+++ b/source/_posts/2025-08-03-EEA以太坊企业联盟安全规范第三版.md
@@ -118,12 +118,13 @@ contract HelloWorld {
 注释内容旨在提供有用信息，但不构成要求。
 ```
 </div>
+
 #### 1.1.3 如何阅读要求
 本文档的核心是​​共同定义了EEA EthTrust认证的要求。
 要求包含：
 - 安全等级（[S]、[M]或[Q]）
 - 对应名称
-- 链接（以"🔗🔗"标识）
+- 链接（以"🔗"标识）
 - 满足要求必须实现的声明
 
 工作组确保本编辑草案中要求的URL始终指向工作组编辑草案中的最新版本要求（可能代表未完成的进展）。
@@ -166,7 +167,7 @@ https://entethalliance.github.io/eta-registry/security-levels-spec.html#req-1-co
 </div>
 
 ##### 1.1.3.1 覆盖要求
-部分要求的声明包含替代条件，由关键词`unless`引入，标识一个或多个​​覆盖要求​​。
+部分要求的声明包含替代条件，由关键词`unless`引入，标识一个或多个​​条件可以覆盖当前要求​​。
 这些是更高安全等级的要求，若被测代码不直接满足较低等级要求，可通过满足这些覆盖要求来实现符合性。
 
 某些情况下需满足多个覆盖要求才能覆盖原要求，此时这些要求被称为​​覆盖要求集合​​。
@@ -192,9 +193,8 @@ https://entethalliance.github.io/eta-registry/security-levels-spec.html#req-1-co
 - 名称为"禁用tx.origin"
 - 覆盖要求为"[Q] 验证tx.origin用法"
 ```
-​​示例5：带覆盖要求的要求示例​​
-[S] 禁用tx.origin
-🔗🔗
+​​示例5：带覆盖要求的示例​​
+[S] 禁用tx.origin🔗
 被测代码​​不得​​包含tx.origin指令，除非满足覆盖要求[Q] 验证tx.origin用法。
 ```
 不包含tx.origin指令的要求可通过自动化验证。
@@ -203,20 +203,19 @@ https://entethalliance.github.io/eta-registry/security-levels-spec.html#req-1-co
 作为其他要求的覆盖要求或属于覆盖要求集合的要求会明确说明：
 ```
 ​​示例6：覆盖要求示例​​
-[M] 禁用非必要Unicode控制符
-🔗🔗
+[M] 禁用非必要Unicode控制符🔗
 被测代码​​不得​​使用Unicode方向控制字符，除非：
-```
-它们对正确渲染文本是必要的
-渲染结果不会误导读者
+- 它们对正确渲染文本是必要的
+- 渲染结果不会误导读者
 这是[S] 禁用Unicode方向控制字符的覆盖要求。
+```
 
 ##### 1.1.3.2 相关要求
 许多要求有​​相关要求​​，即解决主题相关问题的其他要求。
 提供这些链接作为有用信息。与覆盖要求不同，满足相关要求不能替代满足特定要求来实现符合性。
 
 ### 1.2 为什么需要认证合约？
-__本节为非规范性内容。__
+_本节为非规范性内容。_
 以太坊上支撑去中心化应用的许多智能合约已被发现存在安全问题，而目前在发起交易前往往难以实际评估某个地址或合约的安全性。特别是在DeFi领域，用户快速批准代币合约交易、兑换代币和为资金池添加流动性的操作中，有时会忽略安全检查。
 
 要让企业信任以太坊作为关键数据存储或大额资本转移的交易层，需要明确的信号表明合约已通过适当的安全审计。在区块链开发背景下，生产部署前的早期审查尤为重要，因为尝试在部署后更新或修补智能合约所需的时间、精力、资金和/或信誉成本通常远高于其他软件开发场景。
@@ -232,7 +231,7 @@ __本节为非规范性内容。__
 我们希望认证流程的价值能激励其频繁使用，并推动开发使评估过程更简单、更便宜的自动化工具。随着新的安全漏洞、本规范中的问题以及实施挑战的发现，我们希望它们能带来反馈并增加参与企业以太坊联盟EthTrust安全等级工作组或其继任者的积极性，这些工作组负责开发和维护本规范。
 
 ### 1.3 开发安全的智能合约
-__本节为非规范性内容。__
+_本节为非规范性内容。_
 
 本规范要求检查的安全问题对智能合约开发者（尤其是这个快速发展的领域的新手）来说并不总是显而易见的。通过让自有代码完成认证流程（即使没有潜在客户要求），智能合约开发者可以在部署前发现代码中存在的已知弱点并进行修复。
 
@@ -265,7 +264,7 @@ EEA成员可通过加入工作组提供反馈。任何人都可通过Ethtrust-pu
 
 §5.4推荐良好实践章节包含更多建议。虽然它们格式与要求类似，但以"[GP]"标记开头。不要求测试这些内容；但建议谨慎实施和测试。
 
-请注意，良好实施§5.4推荐良好实践可以增强安全性，但在某些情况下，不完整或低质量的实施可能会降低安全性。
+请注意，§5.4推荐良好实践可以增强安全性，但在某些情况下，不完整或低质量的实施可能会降低安全性。
 
 ### 2.2 谁可以提供EEA EthTrust认证？
 本版本规范未对谁能执行审计和提供EEA EthTrust认证做出任何限制。没有为出具认证的审计师或工具定义认证流程。这意味着审查员关于执行准确测试的声明是由他们自己做出的。对于提供EEA EthTrust认证第2版认证的任何人，始终存在欺诈、虚假陈述或无能的可能。
@@ -276,23 +275,23 @@ EEA成员可通过加入工作组提供反馈。任何人都可通过Ethtrust-pu
 </div>
 
 ### 2.3 识别认证内容
-EEA EthTrust评估针对被测代码执行，被测代码是指智能合约或几个相关智能合约的Solidity源代码，以及使用指定参数编译代码生成的字节码。如果被测代码被划分为可部署在不同地址的多个智能合约，则称为合约集合。
+EEA EthTrust评估针对被测代码，被测代码是指智能合约或几个相关智能合约的`Solidity`源代码，以及使用指定参数编译代码生成的字节码。如果被测代码被划分为可部署在不同地址的多个智能合约，则称为合约集合。
 
 ## 3. 安全考虑
 ### 3.1 智能合约的上下文 - 更广泛的考虑
 信息系统安全是本规范主要的工作领域。任何中等复杂度的系统都存在固有风险。本规范描述了以太坊智能合约中安全问题的测试。然而，不存在完美的安全性。EEA EthTrust认证意味着至少已对智能合约执行了定义的最小检查集。这并不意味着被测代码绝对没有安全漏洞。新的安全漏洞会不时被发现。手动审计程序需要技能和判断力。这意味着始终存在审查中未注意到漏洞的可能性。
 
 ### 3.2 可升级合约
-以太坊中的智能合约默认是不可变的。然而，在某些场景下需要修改它们，例如添加新功能或修复错误。可升级合约是通过启用对固定地址执行的代码的更改来满足这些需求的任何类型的合约。可升级合约的一些常见模式使用代理合约：用户直接与之交互的简单包装器，负责将交易转发到另一个合约（本文档中称为执行合约，也称为逻辑合约），该合约包含实际实现智能合约行为的代码。执行合约可以被替换，而作为访问点的代理合约永远不会更改。这两个合约在代码无法更改的意义上仍然不可变，但一个执行合约可以与另一个交换。因此，代理合约可以指向不同的实现，从而"升级"软件。这意味着遵循此模式使合约集合可升级的合约通常不能被视为不可变的，因为代理合约本身可以将调用重定向到新的执行合约，这些执行合约可能不安全或恶意。通过满足本规范中关于访问控制的要求以限制部署新执行合约的升级能力，并按照[Q]按文档实现记录升级模式并遵循该文档，被测代码的部署者可以证明可靠性。
+以太坊中的智能合约默认是不可变的。然而，在某些场景下需要修改它们，例如添加新功能或修复错误。可升级合约是通过启用对固定地址执行的代码的更改来满足这些需求的任何类型的合约。可升级合约的一些常见模式使用代理合约：用户直接与之交互的简单包装器，负责将交易转发到另一个合约（本文档中称为执行合约，也称为逻辑合约），该合约包含实际实现智能合约行为的代码。执行合约可以被替换，而作为访问点的代理合约永远不会更改。这两个合约在代码无法更改的意义上仍然不可变，但一个执行合约可以与另一个交换。因此，代理合约可以指向不同的实现，从而"升级"软件。这意味着遵循此模式使合约集合可升级的合约通常不能被视为不可变的，因为代理合约本身可以将调用重定向到新的执行合约，这些执行合约可能不安全或恶意。通过满足本规范中关于访问控制的要求以限制部署新执行合约的升级能力，并按照 **[Q]按文档实现** 记录升级模式并遵循该文档，被测代码的部署者可以证明可靠性。
 
 通常，代理合约的EEA EthTrust认证不适用于可升级合约的内部逻辑，因此在通过代理合约升级到新执行合约之前需要对新执行合约进行认证。这种核心结构有多种可能的变体，例如包含多个执行合约的合约集合。在称为变形升级的攻击中，一系列智能合约用于说服人们（例如DAO中的投票者）批准部署某段代码，但链中的一个代理合约被更新为部署不同的恶意代码。其他模式依赖于使用`CREATE2`指令在已知地址部署智能合约。目前可以使用`selfdestruct()`方法删除该地址的代码，然后向该地址部署新代码。这种可能性有时用于节省Gas费用，但也用于变形升级攻击中。
 
 ### 3.3 预言机
 以太坊网络的常见功能是使用预言机：可以提供来自链上或链下数据的信息的功能。预言机解决了一系列问题，从提供随机数生成到资产数据，管理流动性池的操作，以及实现对天气、体育或其他特殊兴趣信息的访问。预言机在DeFi和游戏中被大量使用，其中资产数据和随机化是协议设计的核心。
 
-该规范包含检查智能合约是否足够强大以适当处理任何信息返回的要求，包括可能被故意制作用于预言机特定攻击的畸形数据的可能性。虽然预言机的某些方面在本规范范围内，但预言机仍可能提供错误信息，甚至主动产生有害的虚假信息。两个关键的考虑因素是数据损坏或被操纵的风险，以及预言机故障的风险。与这些考虑因素相关的漏洞 - 过度依赖[TWAP](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-twap)，以及对预言机故障的不安全管理 - 已经反复发生，导致各种DeFi协议损失数百万美元的价值。虽然有许多高质量和可信的预言机可用，但即使使用合法数据也可能遭受攻击。当调用预言机时，需要检查接收到的数据是否过时，以避免抢先交易攻击。即使在非DeFi场景中，例如随机性来源，通常也需要为每笔交易重置数据源，以避免下一笔交易的套利。
+该规范包含检查智能合约是否足够强大以适当处理任何信息返回的要求，包括可能被故意制作用于预言机特定攻击的畸形数据的可能性。虽然预言机的某些方面在本规范考虑范围内，但预言机仍可能提供错误信息，甚至主动产生有害的虚假信息。两个关键的考虑因素是数据损坏或被操纵的风险，以及预言机故障的风险。与这些考虑因素相关的漏洞 - 过度依赖[TWAP](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-twap)（Time-Weighted Average Price），以及对预言机故障的不安全管理 - 已经反复发生，导致各种DeFi协议损失数百万美元的价值。虽然有许多高质量和可信的预言机可用，但即使使用合法数据也可能遭受攻击。当调用预言机时，需要检查接收到的数据是否过时，以避免抢先交易攻击。即使在非DeFi场景中，例如随机性来源，通常也需要为每笔交易重置数据源，以避免下一笔交易的套利。
 
-定价预言机的常见策略是提供时间加权平均价格（称为TWAP）。这在一定程度上防止了闪电贷攻击等突然飙升，但代价是提供过时信息。仔细选择时间窗口很重要：当时间窗口太宽时，它不会反映波动的资产价格，给套利者留下机会。然而，资产的"瞬时"价格通常不是一个好的数据点：它是预言机数据中最容易被操纵的部分，而且几乎总是在交易执行时就已经过时。使用整理各种来源数据、从数据中清除异常值并受到社区好评的预言机更有可能可靠。如果预言机是链下的，它反映的是链上数据是过时的还是可靠和准确地反映链下数据是一个重要的考虑因素。即使使用选择良好的TWAP的预言机也可以操纵流动性池或其他DeFi结构，特别是通过利用闪电贷和闪电互换廉价筹集资金。如果目标操纵的资产流动性不足，则可能使其容易受到攻击者仅持有相对少量流动性的影响而导致大幅价格波动。
+定价预言机的常见策略是提供时间加权平均价格（称为TWAP）。这在一定程度上防止了闪电贷攻击等突然价格飙升，但代价是提供过时信息。仔细选择时间窗口很重要：当时间窗口太宽时，它不会反映波动的资产价格，给套利者留下机会。然而，资产的"瞬时"价格通常不是一个好的数据点：它是预言机数据中最容易被操纵的部分，而且几乎总是在交易执行时就已经过时。使用整理各种来源数据、从数据中清除异常值并受到社区好评的预言机更有可能可靠。如果预言机是链下的，它反映的是链上数据是过时的还是可靠和准确地反映链下数据是一个重要的考虑因素。即使使用选择良好的TWAP的预言机也可以操纵流动性池或其他DeFi结构，特别是通过利用闪电贷和闪电互换廉价筹集资金。如果目标操纵的资产流动性不足，则可能使其容易受到攻击者仅持有相对少量流动性的影响而导致大幅价格波动。
 
 在使用预言机时，第二个重要的考虑因素是如何优雅地处理故障情况。如果预言机停止返回数据，或者突然返回一个极不合理的数值，会发生什么？至少有一个协议因此遭受了损失：在极端价格崩盘的罕见情况下，价格并未真正跌至零，而是“挂”在了一个设定的最小值上，使得一些囤积了接近零价格资产的交易者可以将其高价卖回协议。将最小值或最大值硬编码在系统中，可能导致价格难以真实反映市场情况。
 
@@ -338,17 +337,18 @@ MEV一词通常扩展为“矿工提取价值”(Miner Extracted Value)，有时
 此外，部分价值提取本质上是区块生产者利用已知的套利机会，以提供一个更可预测的高效市场。
 </div>
 一些MEV攻击可以通过仔细考虑交易中包含的信息（包括合约所需的参数）来防范。其他缓解策略包括针对排序攻击的保护措施。以太坊基金会维护有关MEV的信息资源集[EF-MEV](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-ef-mev)。
+
 ### 3.8 排序攻击
 各种攻击与恶意重新排列区块中的交易有关，例如通过重新排序、审查或插入特定交易。虽然这类攻击的主要动机是促进MEV攻击，但它们也可用于为其他类型的攻击创造条件。
 <div style="background-color: #f8d7da; border: 1px solid #f5c6cb; border-left: 4px solid #dc3545; border-radius: 4px; padding: 4px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
 <strong style="color:#dc3545;">警告</strong>
-<div style="background-color: #fffbf0; border: 1px solid #ffeaa7; border-left: 4px solid #f39c12; border-radius: 4px; padding: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);"> 示例9：排序攻击
-投票合约的设置阶段有时可能被恶意抑制或抢跑投票选项提案所利用，以限制投票阶段符合条件的候选人数量。区块提议者可以在知道他们将产生一系列区块时恶意安排此类投票初始化期。
+<div style="background-color: #fffbf0; border: 1px solid #ffeaa7; border-left: 4px solid #f39c12; border-radius: 4px; padding: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);"> 示例9：排序攻击</br>
+投票合约的设置阶段有时可能被恶意抑制或抢跑投票选项提案所利用，以限制投票阶段符合条件的候选人数量。区块提议者可以在知道他们将产生一系列区块时恶意安排此类投票初始化。
 </div>
 </div>
 
 排序攻击有多种类型：
-- **审查攻击**, 区块处理器主动抑制提议的交易，为自己谋利。
+- **审查攻击**, 区块处理者主动抑制提议的交易，为自己谋利。
 - **抢跑**, 基于在添加到区块之前可见的交易，允许恶意参与者提交替代交易，挫败原始交易的目的。
   <div style="background-color: #fffbf0; border: 1px solid #ffeaa7; border-left: 4px solid #f39c12; border-radius: 4px; padding: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
   示例10：抢跑攻击策略</br>
@@ -367,21 +367,21 @@ MEV一词通常扩展为“矿工提取价值”(Miner Extracted Value)，有时
 与利用MEV一样，区块生产者处于利用任何排序漏洞的最佳位置。如果他们提前知道他们将在未来产生特定区块，这一点尤其成立。例如参见[futureblock](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-futureblock)或[postmerge-mev](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-postmerge-mev)。
 </div>
 
-实现等级[Q]要求[Q][对敏感操作使用时间锁延迟](https://entethalliance.org/specs/ethtrust-sl/v3/#req-3-timelock-for-privileged-actions)可以防止排序攻击影响敏感操作的执行。其他缓解策略包括使用哈希承诺方案[hash-commit](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-hash-commit)、批量执行或使用第2层[EEA-L2](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-eea-l2)链进行处理。
+实现等级[Q]要求 **[Q][对敏感操作使用时间锁延迟](https://entethalliance.org/specs/ethtrust-sl/v3/#req-3-timelock-for-privileged-actions)** 可以防止排序攻击影响敏感操作的执行。其他缓解策略包括使用哈希承诺方案[hash-commit](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-hash-commit)、批量执行或使用第2层[EEA-L2](https://entethalliance.org/specs/ethtrust-sl/v3/#bib-eea-l2)链进行处理。
 
 ### 3.9 源代码、编译指示和编译器
-本规范版本要求编译的字节码以及构成被测代码的是Solidity源代码。Solidity在很大程度上是以太坊智能合约最常用的编程语言，要求Solidity源代码的好处包括简化许多测试，并且有大量针对Solidity源代码的安全研究。
+本规范版本要求编译的字节码以及构成被测代码的是`Solidity`源代码。`Solidity`在很大程度上是以太坊智能合约最常用的编程语言，要求`Solidity`源代码的好处包括简化许多测试，并且有大量针对`Solidity`源代码的安全研究。
 
-Solidity允许源代码使用编译指示语句指定使用的Solidity编译器版本。本规范不要求任何特定的Solidity编译器版本，只要其不低于0.3.0，但在安全等级[Q]下，仅允许EEA EthTrust认证用于一组有限的Solidity编译器版本，已知这些版本的Solidity编译器在相同选项下从给定源代码生成相同的字节码。
+`Solidity`允许源代码使用编译指示语句指定使用的`Solidity`编译器版本。本规范不要求任何特定的`Solidity`编译器版本，只要其不低于0.3.0，但在安全等级[Q]下，仅允许EEA EthTrust认证用于一组有限的`Solidity`编译器版本，已知这些版本的`Solidity`编译器在相同选项下从给定源代码生成相同的字节码。
 
-要求合约只是Solidity源代码有一些缺点。最明显的是某些代码不是用Solidity编写的。不同的语言有不同的特性，通常支持不同的编码风格。也许更重要的是，这意味着用Solidity编写的已部署合约不能直接测试，除非有人提供源代码。引入源代码读取的另一个重要限制是它容易受到同形文字攻击（[Homoglyph Attacks](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-homoglyph-attacks)），其中看起来相同但不同的字符（如拉丁字母"p"和西里尔字母"р"）可以欺骗人工阅读源代码的人，掩盖恶意行为。还有相关的攻击使用诸如[Unicode方向控制字符](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-unicode-direction-control-characters)之类的功能，或利用组合字符的不一致规范化来实现相同类型的欺骗。
+要求合约只是`Solidity`源代码有一些缺点。最明显的是某些代码不是用`Solidity`编写的。不同的语言有不同的特性，通常支持不同的编码风格。也许更重要的是，这意味着用`Solidity`编写的已部署合约不能直接测试，除非有人提供源代码。引入源代码读取的另一个重要限制是它容易受到同形文字攻击（[Homoglyph Attacks](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-homoglyph-attacks)），其中看起来相同但不同的字符（如拉丁字母"p"和西里尔字母"р"）可以欺骗人工阅读源代码的人，掩盖恶意行为。还有相关的攻击使用诸如[Unicode方向控制字符](https://entethalliance.org/specs/ethtrust-sl/v3/#dfn-unicode-direction-control-characters)之类的功能，或利用组合字符的不一致规范化来实现相同类型的欺骗。
 
 ### 3.10 合约部署
-本规范主要解决智能合约代码中出现的漏洞。然而，需要注意的是，智能合约的部署通常是协议操作的关键要素。智能合约安全的某些方面主要取决于被测代码的部署方式。即使经过审计的协议如果部署不当也可能容易被利用。
+本规范主要解决智能合约代码中出现的漏洞。然而，需要注意的是，智能合约的部署通常是协议操作的关键要素。智能合约安全的某些方面主要取决于被测代码的部署方式。即使经过审计的合约如果部署不当也可能容易被利用。
 
 为特定区块链编写的代码可能依赖于该区块链可用的功能。当代码部署到兼容但不同的链时，功能差异可能暴露漏洞。对于部署到使用EVM补丁分叉的区块链或平行链的任何合约，在虚拟机级别可能不再适用常见的安全假设。首先将EEA EthTrust认证的合约部署到每个链的测试网，并进行彻底的渗透测试是有价值的。
 
-特别令人担忧的是可升级合约的问题，以及部署中具有初始化函数的任何合约。许多协议因意外保留其初始化函数不受保护，或在部署中未在同一交易中调用初始化函数的非原子部署而被黑客攻击。这种情况容易受到抢跑攻击，并可能导致协议被恶意方接管，以及资金被盗或丢失。在与合约部署相同的交易中初始化合约可降低恶意行为者控制合约的风险。
+特别令人担忧的是可升级合约的问题，以及部署中具有初始化函数的任何合约。许多合约因意外保留其初始化函数不受保护，或在部署中未在同一交易中调用初始化函数的非原子部署而被黑客攻击。这种情况容易受到抢跑攻击，并可能导致合约被恶意方接管，以及资金被盗或丢失。在与合约部署相同的交易中初始化合约可降低恶意行为者控制合约的风险。
 
 此外，在构造函数和初始化函数中为`msg.sender`或其他变量分配访问角色对部署的影响需要仔细考虑。这在§5.3.2访问控制要求中进一步讨论。存在专门用于安全代理使用和安全合约部署的多个库和工具。从命令行工具到库再到复杂的基于UI的部署工具，存在许多解决方案来防止不安全的代理部署和升级。对给定合约的初始化函数使用访问控制，并限制在部署时或部署后可以调用初始化函数的次数，可以增强协议本身及其用户的安全性和透明度。此外，禁用重新初始化执行合约能力的函数可以防止以后的攻击或事故。
 
